--- a/BB25HLegalSum.ipynb
+++ b/BB25HLegalSum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,12 +69,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c7cf489651b4de7bffd7dec1a92697c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Split strings:   0%|          | 0/9 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d8d14ed36c8444a3802dc15ec2a18f0f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BM25S Count Tokens:   0%|          | 0/9 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a31fd81718984fd7acb45542f2229c42",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BM25S Compute Scores:   0%|          | 0/9 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5f70f39692c34abdb8b2bcb14872afa8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Split strings:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3978b718ad0f4971b14ce0febe0f480b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BM25S Retrieve:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On March 5, 2021, the Securities and Exchange Commission charged AT&T, Inc. and three of its Investor Relations executives with aiding and abetting the company's violations of the antifraud provisions of Section 10(b) of the Securities Exchange Act of 1934 and Rule 10b-5 thereunder. ; 8.592649\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "243859fab1574785ae384bb77d705df2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Split strings:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e0c064cf59b449cbb9a1ec1ad766f71",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BM25S Retrieve:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "According to the SEC's complaint, the company learned in March 2016 that a steeper-than-expected decline in its first quarter smartphone sales would cause its revenue to fall short of analysts' estimates for the quarter. ; 8.863314\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d86508d4eeda448eab88a099c9c2ced0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Split strings:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2f319585929b41358ae6a98b09cf4a5f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BM25S Retrieve:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The complaint alleges that to avoid falling short of the consensus revenue estimate for the third consecutive quarter, the executives made private, one-on-one phone calls to analysts at approximately 20 separate firms. ; 8.081508\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e0b782e56e434172aca88cebc24c704b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Split strings:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a85d16d63aa4225852615eaaca9709c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BM25S Retrieve:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On these calls, the SEC alleges that Christopher Womack, Michael Black, and Kent Evans told analysts that a steep decline in smartphone sales was a significant factor in the revenue shortfall. ; 4.0497084\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ef253545ec5473aba13b04ad2ab83e3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Split strings:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c885490f78f4e4bb40d3d6b8f3cc983",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BM25S Retrieve:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "As a result of what they were told, the analysts substantially reduced their revenue forecasts, leading to the overall consensus Revenue Estimate falling to just below the level that AT&t ultimately reported to the public on April 26, 2016. ; 6.165641\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "781f122a24af4db9b8ec2e746226be37",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Split strings:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "46e9c8da7a0e48ed9f35712a81c0c653",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BM25S Retrieve:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The SEC seeks permanent injunctive relief and civil monetary penalties against each defendant. ; 5.27659\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "142a8e4b5ab840559a2da65c71d009c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Split strings:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f61a3191185846ffb5fb8253bdcd8d50",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BM25S Retrieve:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The SEC investigation was conducted by George N. Stepaniuk, ; 2.5547967\n"
+     ]
+    }
+   ],
    "source": [
     "#modified spacy for segmentation of legal text\n",
-    "nlp = fct.custom_spacy_model()            \n",
+    "nlp = csp.custom_spacy_model()            \n",
     "\n",
     "# Process the original text\n",
     "doc = nlp(text)\n",
@@ -99,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,14 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2206 1312 1312\n"
+      "2206 1312\n"
      ]
     }
    ],
