--- a/BB25HLegalSum.ipynb
+++ b/BB25HLegalSum.ipynb
@@ -69,13 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c7cf489651b4de7bffd7dec1a92697c",
+       "model_id": "fab5e3a42d6c404ab6b3f120f678c4a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,7 +89,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8d14ed36c8444a3802dc15ec2a18f0f",
+       "model_id": "0d78a19d4acc49919e2874ffb32aa573",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,7 +103,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a31fd81718984fd7acb45542f2229c42",
+       "model_id": "dc4d7de909db49079f6b2f4124414488",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f70f39692c34abdb8b2bcb14872afa8",
+       "model_id": "f558f1abc3904009b865bf08bb650cd5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3978b718ad0f4971b14ce0febe0f480b",
+       "model_id": "e30883d065bf495bbbf50e37f09f595e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "243859fab1574785ae384bb77d705df2",
+       "model_id": "e075a58ace644dc9806db8f433cae8c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,7 +166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e0c064cf59b449cbb9a1ec1ad766f71",
+       "model_id": "48f275f9f94d4dcd96c830c61751103a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,7 +187,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d86508d4eeda448eab88a099c9c2ced0",
+       "model_id": "77349996e8f7464a997336de1ee36190",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f319585929b41358ae6a98b09cf4a5f",
+       "model_id": "398f2e0e9de04246bcc88c1539658d3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,7 +222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0b782e56e434172aca88cebc24c704b",
+       "model_id": "c53e2f3b016a4cfcafd2c38fba7dca3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,7 +236,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a85d16d63aa4225852615eaaca9709c",
+       "model_id": "c692b33b08fa4b76b9a81181c91c93b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,7 +257,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ef253545ec5473aba13b04ad2ab83e3",
+       "model_id": "c066428f7990403fb9cf7eede55a58e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,7 +271,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c885490f78f4e4bb40d3d6b8f3cc983",
+       "model_id": "a8ffc0c9fe91458c91b837c585272264",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,7 +292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "781f122a24af4db9b8ec2e746226be37",
+       "model_id": "27437ba360584a328758ccea3675d181",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,7 +306,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46e9c8da7a0e48ed9f35712a81c0c653",
+       "model_id": "618d11ba3a0a435084c5c8ca420f1ceb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +327,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "142a8e4b5ab840559a2da65c71d009c2",
+       "model_id": "1937166a638a451d97e65b55a815b374",
        "version_major": 2,
        "version_minor": 0
       },
@@ -341,7 +341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f61a3191185846ffb5fb8253bdcd8d50",
+       "model_id": "567c1a09cfa44697a7556e5f2827246d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -419,6 +419,27 @@
    ],
    "source": [
     "print(len(text), len(summary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Metric  Precision    Recall  F1-Score\n",
+      "0  rouge1   0.919811  0.560345  0.696429\n",
+      "1  rouge2   0.791469  0.481268  0.598566\n",
+      "2  rougeL   0.768868  0.468391  0.582143\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = fct.rouge_evaluations(text, summary)\n",
+    "print(score)"
    ]
   }
  ],
