Data processing finished

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +47,35 @@
     "div_class = \"-display-inline-block text-left\"\n",
     "target_div = soup.find('div', class_=div_class)\n",
     "\n",
-    "# Vérifier si le div a été trouvé et extraire le texte\n",
+    "# Extraire le texte du div en fusionnant les textes des balises <a> et <em> avec les textes précédent et suivant\n",
     "if target_div:\n",
-    "    text = target_div.get_text(separator=' ', strip=True)  # Parametre à changer pour pouvoir traiter le texte\n",
-    "    print(\"Texte récupéré dans le div :\")\n",
-    "    print(text)\n",
+    "    temp_result = []\n",
+    "    to_merge = False\n",
+    "    for element in target_div.children:\n",
+    "        if element.name == \"a\" or element.name == \"em\" :\n",
+    "            temp_result.append(element.get_text())\n",
+    "            to_merge = True\n",
+    "        elif (to_merge) :\n",
+    "            temp_result[-2] = temp_result[-2] + \" \" + temp_result[-1] + \" \" + element.get_text()\n",
+    "            temp_result.pop()\n",
+    "            to_merge = False\n",
+    "        else :\n",
+    "            temp_result.append(element.get_text())\n",
+    "\n",
     "else:\n",
-    "    print(f\"Aucun div trouvé avec la classe '{div_class}'.\")"
+    "    print(f\"Aucun div trouvé avec la classe '{div_class}'.\")\n",
+    "\n",
+    "result = []\n",
+    "for res in temp_result:\n",
+    "    if '\\t' in res:\n",
+    "        string = res.replace('\\t', '').replace('\\n', '')\n",
+    "        result.append(string)\n",
+    "    else:\n",
+    "        result[-1] = result[-1] + \" \" + res.replace('\\n', '')\n",
+    "    \n",
+    "for res in result:\n",
+    "    print(res)\n",
+    " \n"
    ]
   }
  ],
