--- a/BB25HLegalSum.ipynb
+++ b/BB25HLegalSum.ipynb
@@ -441,6 +441,455 @@
     "score = fct.rouge_evaluations(text, summary)\n",
     "print(score)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BERT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\Nicolas\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "  torch.utils._pytree._register_pytree_node(\n",
+      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "  torch.utils._pytree._register_pytree_node(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "from transformers import BertModel, BertTokenizer\n",
+    "import torch\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "from nltk.tokenize import sent_tokenize\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb741df806e34b13a913e64372758ac4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\huggingface_hub\\file_download.py:133: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Nicolas\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c33d9a8f74114c249f7f805ac7c616a4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ba1d9c06d0904858b255518f693d1ff5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading config.json:   0%|          | 0.00/570 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d1d103410266400da4236f2b6d772184",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading model.safetensors:   0%|          | 0.00/440M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Charger le modèle et le tokenizer BERT pré-entraîné\n",
+    "model_name = \"bert-base-uncased\"\n",
+    "tokenizer = BertTokenizer.from_pretrained(model_name)\n",
+    "model = BertModel.from_pretrained(model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exemple de texte juridique\n",
+    "document = \"\"\"\n",
+    "La loi garantit les droits et libertés fondamentaux de chaque citoyen.\n",
+    "Le juge a rendu son verdict en se basant sur la loi de 2023.\n",
+    "Les droits des citoyens doivent être respectés dans toute procédure judiciaire.\n",
+    "La constitution de 1958 est la base du système juridique actuel.\n",
+    "Chaque individu a le droit à un procès équitable selon les lois en vigueur.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tokenisation en phrases\n",
+    "sentences = sent_tokenize(document)\n",
+    "\n",
+    "# Fonction pour obtenir les embeddings de phrases avec BERT\n",
+    "def get_sentence_embeddings(sentences):\n",
+    "    embeddings = []\n",
+    "    for sentence in sentences:\n",
+    "        inputs = tokenizer(sentence, return_tensors='pt', padding=True, truncation=True)\n",
+    "        outputs = model(**inputs)\n",
+    "        embeddings.append(outputs.last_hidden_state.mean(dim=1).squeeze().detach().numpy())  # Moyenne des embeddings\n",
+    "    return np.array(embeddings)\n",
+    "\n",
+    "# Obtenir les embeddings des phrases\n",
+    "sentence_embeddings = get_sentence_embeddings(sentences)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1412: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=10)\n",
+      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1436: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Utiliser K-Means pour regrouper des phrases similaires\n",
+    "n_clusters = 3  # Nombre de clusters souhaités (peut être ajusté)\n",
+    "kmeans = KMeans(n_clusters=n_clusters, random_state=0)\n",
+    "kmeans.fit(sentence_embeddings)\n",
+    "\n",
+    "# Étiquettes des clusters\n",
+    "labels = kmeans.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Cluster 1:\n",
+      "- \n",
+      "La loi garantit les droits et libertés fondamentaux de chaque citoyen.\n",
+      "- Les droits des citoyens doivent être respectés dans toute procédure judiciaire.\n",
+      "\n",
+      "Cluster 2:\n",
+      "- La constitution de 1958 est la base du système juridique actuel.\n",
+      "\n",
+      "Cluster 3:\n",
+      "- Le juge a rendu son verdict en se basant sur la loi de 2023.\n",
+      "- Chaque individu a le droit à un procès équitable selon les lois en vigueur.\n",
+      "dict_keys([0, 1, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "cluster = {}\n",
+    "for i in range(n_clusters):\n",
+    "    print(f\"\\nCluster {i+1}:\")\n",
+    "    cluster[i] = []  # Initialiser une liste pour chaque cluster\n",
+    "    for j, sentence in enumerate(sentences):\n",
+    "        if labels[j] == i:\n",
+    "            print(f\"- {sentence}\")\n",
+    "            # Ajouter 'sentence' au cluster 'i'\n",
+    "            cluster[i].append(sentence)\n",
+    "    # Afficher les clés du dictionnaire 'cluster'\n",
+    "print(cluster.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Silhouette Score: 0.12059376388788223\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculer le score de silhouette pour évaluer la qualité du clustering\n",
+    "silhouette_avg = silhouette_score(sentence_embeddings, labels)\n",
+    "print(f\"\\nSilhouette Score: {silhouette_avg}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BM25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting rank-bm25\n",
+      "  Obtaining dependency information for rank-bm25 from https://files.pythonhosted.org/packages/2a/21/f691fb2613100a62b3fa91e9988c991e9ca5b89ea31c0d3152a3210344f9/rank_bm25-0.2.2-py3-none-any.whl.metadata\n",
+      "  Downloading rank_bm25-0.2.2-py3-none-any.whl.metadata (3.2 kB)\n",
+      "Requirement already satisfied: numpy in c:\\users\\nicolas\\anaconda3\\lib\\site-packages (from rank-bm25) (1.24.3)\n",
+      "Downloading rank_bm25-0.2.2-py3-none-any.whl (8.6 kB)\n",
+      "Installing collected packages: rank-bm25\n",
+      "Successfully installed rank-bm25-0.2.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Installer la bibliothèque si nécessaire\n",
+    "%pip install rank-bm25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\Nicolas\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from rank_bm25 import BM25Okapi\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "import nltk\n",
+    "nltk.download('punkt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exemple de documents (textes juridiques)\n",
+    "documents = [\n",
+    "    \"a cat is a feline and likes to purr\",\n",
+    "    \"a dog is the human's best friend and loves to play\",\n",
+    "    \"a bird is a beautiful animal that can fly\",\n",
+    "    \"a fish is a creature that lives in water and swims\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Tokenisation des documents\n",
+    "# tokenized_docs = [word_tokenize(doc.lower()) for doc in documents]\n",
+    "\n",
+    "# # Initialiser le modèle BM25\n",
+    "# bm25 = BM25Okapi(tokenized_docs)\n",
+    "\n",
+    "# Dictionnaire pour stocker les documents tokenisés par cluster\n",
+    "tokenized_clusters = {}\n",
+    "\n",
+    "# Tokenisation des documents pour chaque cluster\n",
+    "for i, sentences in cluster.items():\n",
+    "    tokenized_clusters[i] = [word_tokenize(sentence.lower()) for sentence in sentences]\n",
+    "\n",
+    "# Initialiser un modèle BM25 pour chaque cluster\n",
+    "bm25_models = {}\n",
+    "for i, tokenized_docs in tokenized_clusters.items():\n",
+    "    bm25_models[i] = BM25Okapi(tokenized_docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exemple de requête\n",
+    "query = \"citoyens\"\n",
+    "tokenized_query = word_tokenize(query.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores pour la requête dans le cluster 0: [0. 0.]\n",
+      "Scores pour la requête dans le cluster 1: [0.]\n",
+      "Scores pour la requête dans le cluster 2: [0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcul des scores BM25 pour tous les clusters\n",
+    "for cluster_id, bm25 in bm25_models.items():\n",
+    "    # Calcul des scores pour la requête dans chaque cluster\n",
+    "    scores = bm25.get_scores(tokenized_query)\n",
+    "    print(f\"Scores pour la requête dans le cluster {cluster_id}: {scores}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Afficher les résultats\n",
+    "# for i, score in enumerate(scores):\n",
+    "#     print(f\"Document {i + 1} Score: {score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Cluster 0:\n",
+      "Document 1 tokens: ['la', 'loi', 'garantit', 'les', 'droits', 'et', 'libertés', 'fondamentaux', 'de', 'chaque', 'citoyen', '.']\n",
+      "Document 2 tokens: ['les', 'droits', 'des', 'citoyens', 'doivent', 'être', 'respectés', 'dans', 'toute', 'procédure', 'judiciaire', '.']\n",
+      "\n",
+      "Cluster 1:\n",
+      "Document 1 tokens: ['la', 'constitution', 'de', '1958', 'est', 'la', 'base', 'du', 'système', 'juridique', 'actuel', '.']\n",
+      "\n",
+      "Cluster 2:\n",
+      "Document 1 tokens: ['le', 'juge', 'a', 'rendu', 'son', 'verdict', 'en', 'se', 'basant', 'sur', 'la', 'loi', 'de', '2023', '.']\n",
+      "Document 2 tokens: ['chaque', 'individu', 'a', 'le', 'droit', 'à', 'un', 'procès', 'équitable', 'selon', 'les', 'lois', 'en', 'vigueur', '.']\n",
+      "\n",
+      "Tokens de la requête: ['les', 'droits', 'et', 'libertés', 'des', 'citoyens']\n",
+      "Scores pour la requête dans le cluster 0: [-0.11495985 -0.11495985]\n",
+      "Scores pour la requête dans le cluster 1: [0.]\n",
+      "Scores pour la requête dans le cluster 2: [0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Afficher les tokens de chaque document dans le cluster pour vérifier la tokenisation\n",
+    "for cluster_id, tokenized_docs in tokenized_clusters.items():\n",
+    "    print(f\"\\nCluster {cluster_id}:\")\n",
+    "    for i, doc_tokens in enumerate(tokenized_docs):\n",
+    "        print(f\"Document {i + 1} tokens: {doc_tokens}\")\n",
+    "\n",
+    "# Exemple de requête\n",
+    "query = \"Les droits et libertés des citoyens\"\n",
+    "tokenized_query = word_tokenize(query.lower())\n",
+    "print(f\"\\nTokens de la requête: {tokenized_query}\")\n",
+    "\n",
+    "# Calcul des scores BM25 pour tous les clusters\n",
+    "for cluster_id, bm25 in bm25_models.items():\n",
+    "    # Calcul des scores pour la requête dans chaque cluster\n",
+    "    scores = bm25.get_scores(tokenized_query)\n",
+    "    print(f\"Scores pour la requête dans le cluster {cluster_id}: {scores}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -459,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
