--- a/BB25HLegalSum.ipynb
+++ b/BB25HLegalSum.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "# %pip install bm25s\n",
     "# %pip install spacy\n",
-    "# %pip install -U 'spacy[cuda12x]'"
+    "# %pip install -U 'spacy[cuda12x]'\n",
+    "# %pip install rouge_score"
    ]
   },
   {
@@ -22,6 +23,16 @@
     "import spacy\n",
     "import bm25s\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_path = 'SCOTUS/train.json'\n",
+    "dev_path = 'SCOTUS/dev.json'"
    ]
   },
   {
@@ -130,12 +141,13 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_score\n",
     "from nltk.tokenize import sent_tokenize\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,23 +159,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exemple de texte juridique\n",
-    "document = \"\"\"\n",
-    "The law guarantees the fundamental rights and freedoms of every citizen.\n",
-    "The judge rendered his verdict based on the 2023 law.\n",
-    "The rights of citizens must be respected in all legal proceedings.\n",
-    "The 1958 constitution is the basis of the current legal system.\n",
-    "Every individual has the right to a fair trial under applicable laws.\n",
-    "\"\"\""
+    "# document = \"\"\"\n",
+    "# The law guarantees the fundamental rights and freedoms of every citizen.\n",
+    "# The judge rendered his verdict based on the 2023 law.\n",
+    "# The rights of citizens must be respected in all legal proceedings.\n",
+    "# The 1958 constitution is the basis of the current legal system.\n",
+    "# Every individual has the right to a fair trial under applicable laws.\n",
+    "# \"\"\"\n",
+    "\n",
+    "with open(train_path, 'r', encoding=\"utf-8\") as f:\n",
+    "    train = json.load(f)\n",
+    "\n",
+    "document = train[0][\"raw_source\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,6 +189,12 @@
     "\n",
     "# Fonction pour obtenir les embeddings de phrases avec BERT\n",
     "def get_sentence_embeddings(sentences):\n",
+    "    \"\"\"Obtenir les embeddings de phrases avec BERT\n",
+    "    Args:\n",
+    "        sentences (list): Liste de phrases\n",
+    "    Returns:\n",
+    "        np.array: Tableau des embeddings de phrases    \n",
+    "    \"\"\"\n",
     "    embeddings = []\n",
     "    for sentence in sentences:\n",
     "        inputs = tokenizer(sentence, return_tensors='pt', padding=True, truncation=True)\n",
@@ -197,7 +220,7 @@
    "outputs": [],
    "source": [
     "# Utiliser K-Means pour regrouper des phrases similaires\n",
-    "n_clusters = 3  # Nombre de clusters souhaités (peut être ajusté)\n",
+    "n_clusters = 5  # Nombre de clusters souhaités (peut être ajusté)\n",
     "kmeans = KMeans(n_clusters=n_clusters, random_state=0)\n",
     "kmeans.fit(sentence_embeddings)\n",
     "\n",
@@ -244,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,13 +401,6 @@
     "#     scores = bm25.get_scores(tokenized_query)\n",
     "#     print(f\"Scores pour la requête dans le cluster {cluster_id}: {scores}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
