Data processing with tags finished

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup\n"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,47 +35,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def html_processing(html_content):\n",
+    "    \"\"\"Récupère le contenu intéressant du html en gardant les balises a, em et blockquote\"\"\"\n",
+    "    \n",
+    "    soup = BeautifulSoup(html_content, 'html.parser')\n",
+    "\n",
+    "    # On suppose que le contenu intéressant ne se trouve que dans cette classe\n",
+    "    div_class = \"-display-inline-block text-left\"\n",
+    "    target_div = soup.find('div', class_=div_class)\n",
+    "\n",
+    "    # Extraire le texte du div en fusionnant les textes des balises <a> et <em> avec les textes précédent et suivant\n",
+    "    # et en gardant les balises <a>, <em> et <blockquote>\n",
+    "    if target_div:\n",
+    "        temp_result = []\n",
+    "        to_merge = False\n",
+    "        for element in target_div.children:\n",
+    "            if element.getText() == '\\n':\n",
+    "                continue\n",
+    "            elif element.name == \"a\" or element.name == \"em\" :\n",
+    "                temp_result.append(\"<\" + element.name + \"> \" + element.get_text() + \" </\" + element.name + \">\")\n",
+    "                to_merge = True\n",
+    "            elif (to_merge) :\n",
+    "                if (temp_result[-1].startswith(\"<em>\")):\n",
+    "                    temp_result[-2] = temp_result[-2] + temp_result[-1] + element.get_text()\n",
+    "                else:\n",
+    "                    temp_result[-2] = temp_result[-2] + \" \" + temp_result[-1] + \" \" + element.get_text()\n",
+    "                temp_result.pop()\n",
+    "                to_merge = False\n",
+    "            elif (element.name == \"blockquote\") :\n",
+    "                temp_result.append(\"<\" + element.name + \">\" + element.get_text() + \"</\" + element.name + \">\")\n",
+    "            else :\n",
+    "                temp_result.append(element.get_text())\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"Aucun div trouvé avec la classe '{div_class}'.\")\n",
+    "\n",
+    "    result = []\n",
+    "    for res in temp_result:\n",
+    "        if '\\t' in res:\n",
+    "            string = res.replace('\\t', '').replace('\\n', ' ')\n",
+    "            result.append(string)\n",
+    "        else:\n",
+    "            result[-1] = result[-1] + \" \" + res.replace('\\n', '')\n",
+    "        \n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
+    "text = html_processing(html_content)\n",
     "\n",
-    "soup = BeautifulSoup(html_content, 'html.parser')\n",
-    "\n",
-    "# On suppose que le contenu intéressant ne se trouve que dans cette classe\n",
-    "div_class = \"-display-inline-block text-left\"\n",
-    "target_div = soup.find('div', class_=div_class)\n",
-    "\n",
-    "# Extraire le texte du div en fusionnant les textes des balises <a> et <em> avec les textes précédent et suivant\n",
-    "if target_div:\n",
-    "    temp_result = []\n",
-    "    to_merge = False\n",
-    "    for element in target_div.children:\n",
-    "        if element.name == \"a\" or element.name == \"em\" :\n",
-    "            temp_result.append(element.get_text())\n",
-    "            to_merge = True\n",
-    "        elif (to_merge) :\n",
-    "            temp_result[-2] = temp_result[-2] + \" \" + temp_result[-1] + \" \" + element.get_text()\n",
-    "            temp_result.pop()\n",
-    "            to_merge = False\n",
-    "        else :\n",
-    "            temp_result.append(element.get_text())\n",
-    "\n",
-    "else:\n",
-    "    print(f\"Aucun div trouvé avec la classe '{div_class}'.\")\n",
-    "\n",
-    "result = []\n",
-    "for res in temp_result:\n",
-    "    if '\\t' in res:\n",
-    "        string = res.replace('\\t', '').replace('\\n', '')\n",
-    "        result.append(string)\n",
-    "    else:\n",
-    "        result[-1] = result[-1] + \" \" + res.replace('\\n', '')\n",
-    "    \n",
-    "for res in result:\n",
-    "    print(res)\n",
-    " \n"
+    "for t in text:\n",
+    "    print(t)"
    ]
   }
  ],
