Refactor get_sentence_embeddings function to include tokenizer and model parameters

--- a/BB25HLegalSum.ipynb
+++ b/BB25HLegalSum.ipynb
@@ -135,9 +135,7 @@
    "outputs": [],
    "source": [
     "import nltk\n",
-    "nltk.download('punkt')\n",
     "from transformers import BertModel, BertTokenizer\n",
-    "import torch\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_score\n",
     "from nltk.tokenize import sent_tokenize\n",
@@ -188,10 +186,12 @@
     "sentences = sent_tokenize(document)\n",
     "\n",
     "# Fonction pour obtenir les embeddings de phrases avec BERT\n",
-    "def get_sentence_embeddings(sentences):\n",
+    "def get_sentence_embeddings(sentences, tokenizer, model):\n",
     "    \"\"\"Obtenir les embeddings de phrases avec BERT\n",
     "    Args:\n",
-    "        sentences (list): Liste de phrases\n",
+    "        sentences (List[str]): Liste des phrases à encoder\n",
+    "        tokenizer (transformers.PreTrainedTokenizer): Tokenizer BERT\n",
+    "        model (transformers.PreTrainedModel): Modèle BERT\n",
     "    Returns:\n",
     "        np.array: Tableau des embeddings de phrases    \n",
     "    \"\"\"\n",
@@ -203,7 +203,7 @@
     "    return np.array(embeddings)\n",
     "\n",
     "# Obtenir les embeddings des phrases\n",
-    "sentence_embeddings = get_sentence_embeddings(sentences)"
+    "sentence_embeddings = get_sentence_embeddings(sentences, tokenizer, model)"
    ]
   },
   {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,13 +284,12 @@
     "from rank_bm25 import BM25Okapi\n",
     "from nltk.tokenize import word_tokenize\n",
     "\n",
-    "import nltk\n",
     "nltk.download('punkt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,16 +304,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Tokenisation des documents\n",
-    "# tokenized_docs = [word_tokenize(doc.lower()) for doc in documents]\n",
-    "\n",
-    "# # Initialiser le modèle BM25\n",
-    "# bm25 = BM25Okapi(tokenized_docs)\n",
-    "\n",
     "# Dictionnaire pour stocker les documents tokenisés par cluster\n",
     "tokenized_clusters = {}\n",
     "\n",
@@ -330,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,41 +358,6 @@
     "    for doc in top_docs:\n",
     "        sentence = ' '.join(doc)\n",
     "        print(sentence)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Afficher les résultats\n",
-    "# for i, score in enumerate(scores):\n",
-    "#     print(f\"Document {i + 1} Score: {score}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Afficher les tokens de chaque document dans le cluster pour vérifier la tokenisation\n",
-    "# for cluster_id, tokenized_docs in tokenized_clusters.items():\n",
-    "#     print(f\"\\nCluster {cluster_id}:\")\n",
-    "#     for i, doc_tokens in enumerate(tokenized_docs):\n",
-    "#         print(f\"Document {i + 1} tokens: {doc_tokens}\")\n",
-    "\n",
-    "# # Exemple de requête\n",
-    "# query = \"law and legal rights\"\n",
-    "# tokenized_query = word_tokenize(query.lower())\n",
-    "# print(f\"\\nTokens de la requête: {tokenized_query}\")\n",
-    "\n",
-    "# # Calcul des scores BM25 pour tous les clusters\n",
-    "# for cluster_id, bm25 in bm25_models.items():\n",
-    "#     # Calcul des scores pour la requête dans chaque cluster\n",
-    "#     scores = bm25.get_scores(tokenized_query)\n",
-    "#     print(f\"Scores pour la requête dans le cluster {cluster_id}: {scores}\")"
    ]
   }
  ],
