Refactor tokenize_sentences function to support multiple tokenization methods

--- a/BB25HLegalSum.ipynb
+++ b/BB25HLegalSum.ipynb
@@ -182,8 +182,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def tokenize_sentences(document, method='nltk'):\n",
+    "    \"\"\"Tokenize a document into sentences using the specified method.\n",
+    "    \n",
+    "    Args:\n",
+    "        document (str): The document to tokenize.\n",
+    "        method (str): The method to use for tokenization ('nltk', 'spacy', 'bert').\n",
+    "        \n",
+    "    Returns:\n",
+    "        List[str]: A list of tokenized sentences.\n",
+    "    \"\"\"\n",
+    "    if method == 'nltk':\n",
+    "        return sent_tokenize(document)\n",
+    "    elif method == 'spacy':\n",
+    "        doc = nlp(document)\n",
+    "        return [sent.text for sent in doc.sents]\n",
+    "    elif method == 'bert':\n",
+    "        # Assuming BERT tokenization is similar to nltk for simplicity\n",
+    "        return sent_tokenize(document)\n",
+    "    else:\n",
+    "        raise ValueError(\"Unsupported tokenization method. Choose 'nltk', 'spacy', or 'bert'.\")\n",
+    "\n",
     "# Tokenisation en phrases\n",
-    "sentences = sent_tokenize(document)\n",
+    "sentences = tokenize_sentences(document, method='nltk')\n",
     "\n",
     "# Fonction pour obtenir les embeddings de phrases avec BERT\n",
     "def get_sentence_embeddings(sentences, tokenizer, model):\n",
