Sentencizer in a function

--- a/BB25HLegalSum.ipynb
+++ b/BB25HLegalSum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,20 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import functions as fct\n",
-    "import custom_spacy as csp\n",
-    "import spacy\n",
     "import bm25s\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,28 +66,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#modified spacy for segmentation of legal text\n",
-    "nlp = csp.custom_spacy_model()            \n",
-    "\n",
-    "# Process the original text\n",
-    "doc = nlp(text)\n",
-    "\n",
     "# Create a corpus for BM25\n",
-    "corpus = [sent.text for sent in doc.sents]  \n",
+    "corpus = fct.sent_segmentation(text)\n",
     "\n",
     "# Initialize and index BM25\n",
     "retriever = bm25s.BM25(corpus=corpus)\n",
     "retriever.index(bm25s.tokenize(corpus))  \n",
     "\n",
     "# Process the summary\n",
-    "doc_sum = nlp(summary)\n",
+    "sum_sentences = fct.sent_segmentation(summary)\n",
     "\n",
     "# Retrieve sentences\n",
-    "for sent in doc_sum.sents:\n",
-    "    query = sent.text\n",
-    "    results, scores = retriever.retrieve(bm25s.tokenize(query), k=2)\n",
+    "for sent in sum_sentences:\n",
+    "    results, scores = retriever.retrieve(bm25s.tokenize(sent), k=2)\n",
     "    avg_score = np.mean(scores)\n",
-    "    print(sent.text + \" ; \" + str(avg_score))\n"
+    "    print(sent + \" ; \" + str(avg_score))\n"
    ]
   },
   {
@@ -130,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,14 +129,13 @@
     "from transformers import BertModel, BertTokenizer\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_score\n",
-    "from nltk.tokenize import sent_tokenize\n",
     "import numpy as np\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,33 +168,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tokenize_sentences(document, method='nltk'):\n",
-    "    \"\"\"Tokenize a document into sentences using the specified method.\n",
-    "    \n",
-    "    Args:\n",
-    "        document (str): The document to tokenize.\n",
-    "        method (str): The method to use for tokenization ('nltk', 'spacy', 'bert').\n",
-    "        \n",
-    "    Returns:\n",
-    "        List[str]: A list of tokenized sentences.\n",
-    "    \"\"\"\n",
-    "    if method == 'nltk':\n",
-    "        return sent_tokenize(document)\n",
-    "    elif method == 'spacy':\n",
-    "        doc = nlp(document)\n",
-    "        return [sent.text for sent in doc.sents]\n",
-    "    elif method == 'bert':\n",
-    "        # Assuming BERT tokenization is similar to nltk for simplicity\n",
-    "        return sent_tokenize(document)\n",
-    "    else:\n",
-    "        raise ValueError(\"Unsupported tokenization method. Choose 'nltk', 'spacy', or 'bert'.\")\n",
-    "\n",
     "# Tokenisation en phrases\n",
-    "sentences = tokenize_sentences(document, method='nltk')\n",
+    "sentences = fct.sent_segmentation(document, method='nltk')\n",
     "\n",
     "# Fonction pour obtenir les embeddings de phrases avec BERT\n",
     "def get_sentence_embeddings(sentences, tokenizer, model):\n",
@@ -236,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
