--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(train_path, 'r', encoding=\"utf-8\") as f:\n",
-    "    train = json.load(f)\n",
-    "\n",
-    "html_content = train[0][\"raw_source\"]"
+    "    train = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,14 +73,36 @@
     "        print(f\"Aucun div trouvé avec la classe '{div_class}'.\")\n",
     "\n",
     "    result = []\n",
+    "\n",
     "    for res in temp_result:\n",
     "        if '\\t' in res:\n",
     "            string = res.replace('\\t', '').replace('\\n', ' ')\n",
     "            result.append(string)\n",
     "        else:\n",
-    "            result[-1] = result[-1] + \" \" + res.replace('\\n', '')\n",
-    "        \n",
+    "            if len(result) < 1:\n",
+    "                result.append(res.replace('\\n', ''))\n",
+    "            else:\n",
+    "                result[-1] = result[-1] + \" \" + res.replace('\\n', '')\n",
+    "\n",
     "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(train)):\n",
+    "    html_content = train[i][\"raw_source\"]\n",
+    "\n",
+    "    text = html_processing(html_content)\n",
+    "\n",
+    "    name = 'data_txt_save/train_' + str(i) + '.txt'\n",
+    "\n",
+    "    with open(name, 'w', encoding='utf-8') as f:\n",
+    "        for line in text:\n",
+    "            f.write(line + '\\n')"
    ]
   },
   {
@@ -90,12 +110,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "text = html_processing(html_content)\n",
-    "\n",
-    "for t in text:\n",
-    "    print(t)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -114,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
